criando back-end em python e fazendo integração com banco de dados

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,34 +10,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../static/pages/style.css">
 
 </head>
 <body>
-    
-<!-- header section starts  -->
 
-<header>
-
-    <a href="#" class="logo"><span>real</span>Estate</a>
-
-    <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="#services">services</a>
-        <a href="#featured">featured</a>
-        <a href="#agents">agents</a>
-        <a href="#contact">contact</a>
-    </nav>
-
-    <div class="icons">
-        <div id="menu-bars" class="fas fa-bars"></div>
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-user"></a>
-    </div>
-
-</header>
-
-<!-- header section ends -->
+{% include 'header.html' %}
 
 <!-- home section starts  -->
 
@@ -138,21 +116,21 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/s-1.png" alt="">
+            <img src="../static/s-1.png" alt="">
             <h3>buying home</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio ipsa ab cum error quas fuga ad? Perspiciatis, autem officiis?</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
-            <img src="images/s-2.png" alt="">
+            <img src="../static/s-2.png" alt="">
             <h3>renting home</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio ipsa ab cum error quas fuga ad? Perspiciatis, autem officiis?</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
-            <img src="images/s-3.png" alt="">
+            <img src="../static/s-3.png" alt="">
             <h3>selling home</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio ipsa ab cum error quas fuga ad? Perspiciatis, autem officiis?</p>
             <a href="#" class="btn">learn more</a>
@@ -174,7 +152,7 @@
 
         <div class="box">
             <div class="image-container">
-                <img src="images/img-1.jpg" alt="">
+                <img src="../static/img-1.jpg" alt="">
                 <div class="info">
                     <h3>3 days ago</h3>
                     <h3>for rent</h3>
@@ -209,7 +187,7 @@
 
         <div class="box">
             <div class="image-container">
-                <img src="images/img-2.jpg" alt="">
+                <img src="../static/img-2.jpg" alt="">
                 <div class="info">
                     <h3>6 days ago</h3>
                     <h3>for sell</h3>
@@ -244,7 +222,7 @@
 
         <div class="box">
             <div class="image-container">
-                <img src="images/img-3.jpg" alt="">
+                <img src="../static/img-3.jpg" alt="">
                 <div class="info">
                     <h3>1 days ago</h3>
                     <h3>for rent</h3>
@@ -279,7 +257,7 @@
 
         <div class="box">
             <div class="image-container">
-                <img src="images/img-4.jpg" alt="">
+                <img src="../static/img-4.jpg" alt="">
                 <div class="info">
                     <h3>9 days ago</h3>
                     <h3>for rent</h3>
@@ -314,7 +292,7 @@
 
         <div class="box">
             <div class="image-container">
-                <img src="images/img-5.jpg" alt="">
+                <img src="../static/img-5.jpg" alt="">
                 <div class="info">
                     <h3>10 days ago</h3>
                     <h3>for sell</h3>
@@ -349,7 +327,7 @@
 
         <div class="box">
             <div class="image-container">
-                <img src="images/img-6.jpg" alt="">
+                <img src="../static/img-6.jpg" alt="">
                 <div class="info">
                     <h3>3 days ago</h3>
                     <h3>for sell</h3>
@@ -399,7 +377,7 @@
         <div class="box">
             <a href="#" class="fas fa-envelope"></a>
             <a href="#" class="fas fa-phone"></a>
-            <img src="images/pic-1.png" alt="">
+            <img src="../static/pic-1.png" alt="">
             <h3>john deo</h3>
             <span>agent</span>
             <div class="share">
@@ -413,7 +391,7 @@
         <div class="box">
             <a href="#" class="fas fa-envelope"></a>
             <a href="#" class="fas fa-phone"></a>
-            <img src="images/pic-2.png" alt="">
+            <img src="../static/pic-2.png" alt="">
             <h3>john deo</h3>
             <span>agent</span>
             <div class="share">
@@ -427,7 +405,7 @@
         <div class="box">
             <a href="#" class="fas fa-envelope"></a>
             <a href="#" class="fas fa-phone"></a>
-            <img src="images/pic-3.png" alt="">
+            <img src="../static/pic-3.png" alt="">
             <h3>john deo</h3>
             <span>agent</span>
             <div class="share">
@@ -441,7 +419,7 @@
         <div class="box">
             <a href="#" class="fas fa-envelope"></a>
             <a href="#" class="fas fa-phone"></a>
-            <img src="images/pic-4.png" alt="">
+            <img src="../static/pic-4.png" alt="">
             <h3>john deo</h3>
             <span>agent</span>
             <div class="share">
@@ -467,21 +445,21 @@
 <div class="icons-container">
 
     <div class="icons">
-        <img src="images/icon-1.png" alt="">
+        <img src="../static/icon-1.png" alt="">
         <h3>phone number</h3>
         <p>+123-456-7890</p>
         <p>+111-222-3333</p>
     </div>
 
     <div class="icons">
-        <img src="images/icon-2.png" alt="">
+        <img src="../static/icon-2.png" alt="">
         <h3>email address</h3>
         <p> hellofreewebsitecode@gmail.com </p>
         <p> hellofreewebsitecode@gmail.com </p>
     </div>
 
      <div class="icons">
-        <img src="images/icon-3.png" alt="">
+        <img src="../static/icon-3.png" alt="">
         <h3>office address</h3>
         <p>jogeshwari, mumbai, india - 400104</p>
     </div>
