--- a/templates/index.html
+++ b/templates/index.html
@@ -186,7 +186,7 @@
                 </div>
                 <div class="buttons">
                     <a href="#contact" class="btn">Visitar</a>
-                    <a href="#" class="btn">Ver detalhes</a>
+                    <a href="#" class="btn">detalhes</a>
                 </div>
             </div>
         </div>
