--- a/templates/index.html
+++ b/templates/index.html
@@ -165,7 +165,7 @@
                     <h3>{{imoveis.status}}</h3>
                 </div>
                 <div class="icons">
-                    <a href="#" class="fas fa-camera"><h3>{{cont_img}}</h3></a>
+                    <a href="#" class="fas fa-camera"><h3>+</h3></a>
                 </div>
             </div>
             <div class="content">
