--- a/templates/index.html
+++ b/templates/index.html
@@ -180,7 +180,7 @@
                     <p>{{imoveis.rua}}, {{imoveis.bairro}} - {{imoveis.cidade}}</p>
                 </div>
                 <div class="details">
-                    <h3> <i class="fas fa-expand"></i> {{imoveis.area}}² </h3>
+                    <h3> <i class="fas fa-expand"></i> {{imoveis.area}} m² </h3>
                     <h3> <i class="fas fa-bed"></i> {{imoveis.quartos}} quartos </h3>
                     <h3> <i class="fas fa-bath"></i> {{imoveis.banheiros}} banheiros </h3>
                 </div>
