--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 
 <header>
 
-    <a href="#" class="logo"><span>real</span>Estate</a>
+    <a href="#" class="logo"><span>Victor</span>Imóveis</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
