--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,11 @@
 
     <form action="">
 
-        <h3>find your perfect home</h3>
+        <h3>Encontre o imóvel perfeito para você</h3>
 
         <div class="buttons-container">
-            <a href="#" class="btn">for rent</a>
-            <a href="#" class="btn">for sell</a>
+            <a href="#" class="btn">para alugar</a>
+            <a href="#" class="btn">para vender</a>
         </div>
 
         <div class="inputBox">
@@ -111,27 +111,27 @@
 
 <section class="services" id="services">
 
-    <h1 class="heading"> our <span>services</span> </h1>
+    <h1 class="heading"> Nossos <span>serviços</span> </h1>
 
     <div class="box-container">
 
         <div class="box">
-            <img src="../static/s-1.png" alt="">
-            <h3>buying home</h3>
+            <img src="../static/undraw_For_sale_re_egkk (2).png" alt="">
+            <h3>Compre um imóvel</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio ipsa ab cum error quas fuga ad? Perspiciatis, autem officiis?</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
-            <img src="../static/s-2.png" alt="">
-            <h3>renting home</h3>
+            <img src="../static/undraw_House_searching_re_stk8.png" alt="">
+            <h3>Alugue um imóvel</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio ipsa ab cum error quas fuga ad? Perspiciatis, autem officiis?</p>
             <a href="#" class="btn">learn more</a>
         </div>
 
         <div class="box">
-            <img src="../static/s-3.png" alt="">
-            <h3>selling home</h3>
+            <img src="../static/undraw_Interview_re_e5jn.png" alt="">
+            <h3>Venda um imóvel</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam distinctio ipsa ab cum error quas fuga ad? Perspiciatis, autem officiis?</p>
             <a href="#" class="btn">learn more</a>
         </div>
@@ -180,9 +180,9 @@
                     <p>{{imoveis.rua}}, {{imoveis.bairro}} - {{imoveis.cidade}}</p>
                 </div>
                 <div class="details">
-                    <h3> <i class="fas fa-expand"></i> {{imoveis.area}} m² </h3>
-                    <h3> <i class="fas fa-bed"></i> {{imoveis.quartos}} quartos </h3>
-                    <h3> <i class="fas fa-bath"></i> {{imoveis.banheiros}} banheiros </h3>
+                    <h3> <i class="fas fa-expand"></i> {{imoveis.area}}² </h3>
+                    <h3> <i class="fas fa-bed"></i> {{imoveis.quartos}}</h3>
+                    <h3> <i class="fas fa-bath"></i> {{imoveis.banheiros}}</h3>
                 </div>
                 <div class="buttons">
                     <a href="#contact" class="btn">Visitar</a>
