--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete responsive real estate website design tutorial</title>
+    <title>Victor Moura | Imóveis</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -171,7 +171,6 @@
             <div class="content">
                 <div class="price">
                     <h3>R{{imoveis.price}}</h3>
-                    <!-- <a href="#" class="fas fa-heart"></a> -->
                     <a href="#contact" class="fas fa-envelope"></a>
                     <a href="#contact" class="fas fa-phone"></a>
                 </div>
@@ -191,111 +190,6 @@
             </div>
         </div>
     {% endfor %}
-
-<!--         <div class="box">
-            <div class="image-container">
-                <img src="../static/img-2.jpg" alt="">
-                <div class="info">
-                    <h3>6 days ago</h3>
-                    <h3>for sell</h3>
-                </div>
-                <div class="icons">
-                    <a href="#" class="fas fa-film"><h3>2</h3></a>
-                    <a href="#" class="fas fa-camera"><h3>7</h3></a>
-                </div>
-            </div>
-            <div class="content">
-                <div class="price">
-                    <h3>$25,000/mo</h3>
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-envelope"></a>
-                    <a href="#" class="fas fa-phone"></a>
-                </div>
-                <div class="location">
-                    <h3>modern apartments</h3>
-                    <p>jogeshwari west, mumbai, india - 400104</p>
-                </div>
-                <div class="details">
-                    <h3> <i class="fas fa-expand"></i> 3500 sqft </h3>
-                    <h3> <i class="fas fa-bed"></i> 3 beds </h3>
-                    <h3> <i class="fas fa-bath"></i> 2 baths </h3>
-                </div>
-                <div class="buttons">
-                    <a href="#" class="btn">request info</a>
-                    <a href="#" class="btn">view details</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image-container">
-                <img src="../static/img-3.jpg" alt="">
-                <div class="info">
-                    <h3>1 days ago</h3>
-                    <h3>for rent</h3>
-                </div>
-                <div class="icons">
-                    <a href="#" class="fas fa-film"><h3>1</h3></a>
-                    <a href="#" class="fas fa-camera"><h3>6</h3></a>
-                </div>
-            </div>
-            <div class="content">
-                <div class="price">
-                    <h3>$25,000/mo</h3>
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-envelope"></a>
-                    <a href="#" class="fas fa-phone"></a>
-                </div>
-                <div class="location">
-                    <h3>modern apartments</h3>
-                    <p>jogeshwari west, mumbai, india - 400104</p>
-                </div>
-                <div class="details">
-                    <h3> <i class="fas fa-expand"></i> 3500 sqft </h3>
-                    <h3> <i class="fas fa-bed"></i> 3 beds </h3>
-                    <h3> <i class="fas fa-bath"></i> 2 baths </h3>
-                </div>
-                <div class="buttons">
-                    <a href="#" class="btn">request info</a>
-                    <a href="#" class="btn">view details</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="box">
-            <div class="image-container">
-                <img src="../static/img-4.jpg" alt="">
-                <div class="info">
-                    <h3>9 days ago</h3>
-                    <h3>for rent</h3>
-                </div>
-                <div class="icons">
-                    <a href="#" class="fas fa-film"><h3>2</h3></a>
-                    <a href="#" class="fas fa-camera"><h3>6</h3></a>
-                </div>
-            </div>
-            <div class="content">
-                <div class="price">
-                    <h3>$25,000/mo</h3>
-                    <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-envelope"></a>
-                    <a href="#" class="fas fa-phone"></a>
-                </div>
-                <div class="location">
-                    <h3>modern apartments</h3>
-                    <p>jogeshwari west, mumbai, india - 400104</p>
-                </div>
-                <div class="details">
-                    <h3> <i class="fas fa-expand"></i> 3500 sqft </h3>
-                    <h3> <i class="fas fa-bed"></i> 3 beds </h3>
-                    <h3> <i class="fas fa-bath"></i> 2 baths </h3>
-                </div>
-                <div class="buttons">
-                    <a href="#" class="btn">request info</a>
-                    <a href="#" class="btn">view details</a>
-                </div>
-            </div>
-        </div> -->
 
         <div class="box">
             <div class="image-container">
@@ -381,61 +275,48 @@
 
     <div class="box-container">
 
-        <div class="box">
-            <a href="#" class="fas fa-envelope"></a>
-            <a href="#" class="fas fa-phone"></a>
-            <img src="../static/pic-1.png" alt="">
-            <h3>john deo</h3>
-            <span>agent</span>
-            <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
+    {% for user in lista_user %}
+        {% if user.role == "Corretor imobiliário" %}
+            <div class="box">
+                <a href="#contact" class="fas fa-envelope"></a>
+                <a href="#contact" class="fas fa-phone"></a>
+                {% for image in lista_img_user %}
+                    {% if image.user_id == user.id %}
+                        <img src="{{image.img_url}}" alt="">
+                    {% endif %}
+                {% endfor %}
+                <h3>{{user.name}}</h3>
+                <span>Corretor Imobiliário</span>
+                <div class="share">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <!-- <a href="#" class="fab fa-twitter"></a> -->
+                    <a href="#" class="fab fa-instagram"></a>
+                   <!--  <a href="#" class="fab fa-linkedin"></a> -->
+                </div>
             </div>
-        </div>
+        {% endif%}
 
-        <div class="box">
-            <a href="#" class="fas fa-envelope"></a>
-            <a href="#" class="fas fa-phone"></a>
-            <img src="../static/pic-2.png" alt="">
-            <h3>john deo</h3>
-            <span>agent</span>
-            <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
+        {% if user.role == "Estagiário" %}
+            <div class="box">
+                <a href="#contact" class="fas fa-envelope"></a>
+                <a href="#contact" class="fas fa-phone"></a>
+                {% for image in lista_img_user %}
+                    {% if image.user_id == user.id %}
+                        <img src="{{image.img_url}}" alt="">
+                    {% endif %}
+                {% endfor %}
+                <h3>john deo</h3>
+                <span>agent</span>
+                <div class="share">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <!-- <a href="#" class="fab fa-twitter"></a> -->
+                    <a href="#" class="fab fa-instagram"></a>
+                    <!-- <a href="#" class="fab fa-linkedin"></a> -->
+                </div>
             </div>
-        </div>
+        {% endif%}
 
-        <div class="box">
-            <a href="#" class="fas fa-envelope"></a>
-            <a href="#" class="fas fa-phone"></a>
-            <img src="../static/pic-3.png" alt="">
-            <h3>john deo</h3>
-            <span>agent</span>
-            <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
-            </div>
-        </div>
-
-        <div class="box">
-            <a href="#" class="fas fa-envelope"></a>
-            <a href="#" class="fas fa-phone"></a>
-            <img src="../static/pic-4.png" alt="">
-            <h3>john deo</h3>
-            <span>agent</span>
-            <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
-            </div>
-        </div>
+    {% endfor %}
 
     </div>
 
@@ -453,21 +334,19 @@
 
     <div class="icons">
         <img src="../static/icon-1.png" alt="">
-        <h3>phone number</h3>
-        <p>+123-456-7890</p>
-        <p>+111-222-3333</p>
+        <h3>telefone</h3>
+        <p>73 9 91172026</p>
     </div>
 
     <div class="icons">
         <img src="../static/icon-2.png" alt="">
-        <h3>email address</h3>
-        <p> hellofreewebsitecode@gmail.com </p>
-        <p> hellofreewebsitecode@gmail.com </p>
+        <h3>email</h3>
+        <p> Vr7dmoura@gmail.com </p>
     </div>
 
      <div class="icons">
         <img src="../static/icon-3.png" alt="">
-        <h3>office address</h3>
+        <h3>escritório</h3>
         <p>jogeshwari, mumbai, india - 400104</p>
     </div>
 
