--- a/templates/header.html
+++ b/templates/header.html
@@ -13,9 +13,8 @@
 
     <div class="icons">
         <div id="menu-bars" class="fas fa-bars"></div>
-        <a href="#" class="fas fa-user"></a>
+        <a href="/login" class="fas fa-user"></a>
     </div>
-
 </header>
 
 <!-- header section ends -->
