--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,9 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-
     <header>
-
         <a href="#" class="logo"><span>Victor</span>Imóveis</a>
     
         <nav class="navbar">
@@ -29,6 +27,56 @@
         </div>
     </header>
 
+
+    <section class="featured" id="featured">
+
+        <h1 class="heading"> <span>featured</span> properties </h1>
+
+        <div class="box-container">
+
+
+        {% for imoveis in lista_imovel %}
+            <div class="box">   
+                <div class="image-container">
+                    {% for image in lista_img %}
+                        {% if image.imovel_id == imoveis.id %}
+                            <img src="{{image.img_url}}" alt="">
+                        {% endif %}
+                    {% endfor %}
+                    
+                    <div class="info">
+                        <h3>{{imoveis.data_cadastro}}</h3>
+                        <h3>{{imoveis.status}}</h3>
+                    </div>
+                    <div class="icons">
+                        <a href="#" class="fas fa-camera"><h3>+</h3></a>
+                    </div>
+                </div>
+                <div class="content">
+                    <div class="price">
+                        <h3>R{{imoveis.price}}</h3>
+                        <a href="#contact" class="fas fa-envelope"></a>
+                        <a href="#contact" class="fas fa-phone"></a>
+                    </div>
+                    <div class="location">
+                        <h3>{{imoveis.bairro}}</h3>
+                        <p>{{imoveis.rua}}, {{imoveis.bairro}} - {{imoveis.cidade}}</p>
+                    </div>
+                    <div class="details">
+                        <h3> <i class="fas fa-expand"></i> {{imoveis.area}}² </h3>
+                        <h3> <i class="fas fa-bed"></i> {{imoveis.quartos}}</h3>
+                        <h3> <i class="fas fa-bath"></i> {{imoveis.banheiros}}</h3>
+                    </div>
+                    <div class="buttons">
+                        <a href="#contact" class="btn">Editar</a>
+                        <a href="#" class="btn">Excluir</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+        </div>
+        
+</section>
 
 
 
