--- a/templates/login.html
+++ b/templates/login.html
@@ -13,23 +13,22 @@
 
     <div class="container">
       <div class="wrapper">
-        <div class="title"><span>Login Form</span></div>
+        <div class="title"><span>Login</span></div>
         <form method="POST" autocomplete="on">
           <div class="row">
             <i class="fas fa-user"></i>
             <label for="email">Email:</label>
-            <input type="text" name="email" required>
+            <input type="text" name="email" required placeholder="Email cadastrado">
           </div>
           <div class="row">
             <i class="fas fa-lock"></i>
             <label for="password">Senha:</label>
-            <input type="password" name="password"  required>
+            <input type="password" name="password"  required placeholder="Senha">
           </div>
-          <div class="pass"><a href="#">Forgot password?</a></div>
           
         <div class="buttons">
             <a href="/" class="btn">Voltar</a>
-            <input type="submit" value="Cadastrar" class="btn">
+            <input type="submit" value="Entrar" class="btn">
         </div>
         </form>
       </div>
