--- a/templates/imovel_register.html
+++ b/templates/imovel_register.html
@@ -1,72 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Registration Form</title>
-	<link rel="stylesheet" href="../static/pages/imovel_register.css">
-    <link rel="stylesheet" href="../static/pages/style.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Registration Form</title>
+   <link rel="stylesheet" href="../static/pages/imovel_register.css">
+   <link rel="stylesheet" href="../static/pages/style.css">
 </head>
+
 <body>
 
-<div class="wrapper">
-    <div class="title"><span>Login Form</span></div>
-    <div class="form">
-       <div class="inputfield">
-          <label>First Name</label>
-          <input type="text" class="input">
-       </div>  
-        <div class="inputfield">
-          <label>Last Name</label>
-          <input type="text" class="input">
-       </div>  
-       <div class="inputfield">
-          <label>Password</label>
-          <input type="password" class="input">
-       </div>  
-      <div class="inputfield">
-          <label>Confirm Password</label>
-          <input type="password" class="input">
-       </div> 
-        <div class="inputfield">
-          <label>Gender</label>
-          <div class="custom_select">
-            <select>
-              <option value="">Select</option>
-              <option value="male">Male</option>
-              <option value="female">Female</option>
-            </select>
-          </div>
-       </div> 
-        <div class="inputfield">
-          <label>Email Address</label>
-          <input type="text" class="input">
-       </div> 
-      <div class="inputfield">
-          <label>Phone Number</label>
-          <input type="text" class="input">
-       </div> 
-      <div class="inputfield">
-          <label>Address</label>
-          <textarea class="textarea"></textarea>
-       </div> 
-      <div class="inputfield">
-          <label>Postal Code</label>
-          <input type="text" class="input">
-       </div> 
-      <div class="inputfield terms">
-          <label class="check">
-            <input type="checkbox">
-            <span class="checkmark"></span>
-          </label>
-          <p>Agreed to terms and conditions</p>
-       </div> 
-        <div class="buttons">
-            <a href="/" class="btn">Voltar</a>
-            <a href="#" class="btn">Next</a>
+   {% if id_atribuido %}
+
+        <div class="nav">
+            <p>Imóvel cadastrado com sucesso!</br>
+                <br>
+            O ID atribuido foi <span class="id_atribuido">{{ id_atribuido}}</span>.<br>
+            <!-- <a href="/read/{{ id_atribuido}}" class ="botao">Visualizar</a>
+            </p> -->
         </div>
-    </div>
-</div>	
-	
+
+   {% else %}
+
+   <div class="wrapper">
+      <div class="title"><span>Cadastro de imóveis</span></div>
+      <div class="form">
+         <form method="POST" autocomplete="on">
+            <div class="inputfield">
+               <label>Status do imóvel:</label>
+               <div class="custom_select">
+                  <select name="status">
+                     <option value="">Select</option>
+                     <option value="para vender">Vender</option>
+                     <option value="para alugar">Alugar</option>
+                  </select>
+               </div>
+            </div>
+            <div class="inputfield">
+               <label>Categoria do imóvel:</label>
+               <div class="custom_select">
+                  <select name="category">
+                     <option value="">Select</option>
+                     <option value="casa">Casa</option>
+                     <option value="apartamento">Apartamento</option>
+                     <option value="ponto comercial">Ponto comercial</option>
+                     <option value="armazem">Armazem</option>
+                     <option value="terreno">Terreno</option>
+                  </select>
+               </div>
+            </div>
+            <div class="inputfield">
+               <label>Estado da propriedade:</label>
+               <div class="custom_select">
+                  <select name="prop_state">
+                     <option value="">Select</option>
+                     <option value="pronta para morar">Pronta para morar</option>
+                     <option value="semi mobiliada">Semi mobiliada</option>
+                     <option value="mobiliada">Mobiliada</option>
+                     <option value="em construção">Em construção</option>
+                  </select>
+               </div>
+            </div>
+            <div class="inputfield">
+               <label>Espaços:</label>
+               <div class="custom_select">
+                  <select name="space">
+                     <option value="">Select</option>
+                     <option value="piscina">Piscina</option>
+                     <option value="garagem">Garagem</option>
+                     <option value="area de churrasco">Àrea de churrasco</option>
+                     <option value="edicula">Edícula</option>
+                  </select>
+               </div>
+            </div>
+            <div class="inputfield">
+               <label>Banheiros:</label>
+               <input name="banheiros" type="number" class="input">
+            </div>
+            <div class="inputfield">
+               <label>Quartos:</label>
+               <input name="quartos" type="number" class="input">
+            </div>
+            <div class="inputfield">
+               <label>Cidade:</label>
+               <input name="cidade" type="text" class="input">
+            </div>
+            <div class="inputfield">
+               <label>Bairro:</label>
+               <input name="bairro" type="text" class="input">
+            </div>
+            <div class="inputfield">
+               <label>Data:</label>
+               <input name="data_cadastro" type="date" class="input">
+            </div>
+            <div class="inputfield">
+               <label>Valor R$:</label>
+               <input name="price" type="number" class="input">
+            </div>
+            <div class="inputfield">
+               <label>Rua:</label>
+               <input name="rua" type="text" class="input">
+            </div>
+            <div class="inputfield">
+               <label>Área m²:</label>
+               <input name="area" type="number" class="input">
+            </div><br>
+            <div class="buttons">
+               <a href="/" class="btn">Voltar</a>
+               <input type="submit" value="Cadastrar" class="btn">
+            </div>
+         </form>
+      </div>
+   </div>
+
+   {% endif %}
+
 </body>
+
 </html>
