finalizando funçao de deletar

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="buttons">
                         <a href="#contact" class="btn">Editar</a>
-                        <a href="#" class="btn">Excluir</a>
+                        <a href="/delete/{{imoveis.id}}" class="btn">Excluir</a>
                     </div>
                 </div>
             </div>
