--- a/templates/index.html
+++ b/templates/index.html
@@ -185,7 +185,7 @@
                 </div>
                 <div class="buttons">
                     <a href="#contact" class="btn">Visitar</a>
-                    <a href="#" class="btn">detalhes</a>
+                    <a href="/ver_detalhes/{{imoveis.id}}" class="btn" class="btn">detalhes</a>
                 </div>
             </div>
         </div>
