--- a/templates/admin.html
+++ b/templates/admin.html
@@ -68,7 +68,7 @@
                         <h3> <i class="fas fa-bath"></i> {{imoveis.banheiros}}</h3>
                     </div>
                     <div class="buttons">
-                        <a href="#contact" class="btn">Editar</a>
+                        <a href="/ver_detalhes/{{imoveis.id}}" class="btn">Editar</a>
                         <a href="/delete/{{imoveis.id}}" class="btn">Excluir</a>
                     </div>
                 </div>
