--- a/templates/delete.html
+++ b/templates/delete.html
@@ -15,7 +15,7 @@
         <!-- <button type="submit" class="btn">Submit</button> -->
         <div class="popup">
             <p><i><b>O IMÓVEL FOI EXCLUÍDO COM SUCESSO</b></i></p>
-            <a href="#"></a><button type="button" class="btn btn-dark">Voltar</button></a>
+            <a href="/"></a><button type="button" class="btn btn-dark">Voltar</button></a>
         </div>
     </div>
     {% elif imovel %}
@@ -23,7 +23,7 @@
         <!-- <button type="submit" class="btn">Submit</button> -->
         <div class="popup">
             <p><i><b>TEM CERTEZA QUE DESEJA EXCLUIR ESSE IMÓVEL?</b></i></p>
-            <a href="#"></a><button type="button" class="btn btn-dark">Cancelar</button></a>
+            <a href="/"></a><button type="button" class="btn btn-dark">Cancelar</button></a>
             <a href="/delete/{{imovel.id}}/confirmed"><button type="button" class="btn btn-outline-danger">Excluir</button></a>
         </div>
     </div>
