--- a/templates/header.html
+++ b/templates/header.html
@@ -11,10 +11,10 @@
         <a href="#contact">contact</a>
     </nav>
 
-    <div class="icons">
+    <!-- <div class="icons">
         <div id="menu-bars" class="fas fa-bars"></div>
         <a href="/login" class="fas fa-user"></a>
-    </div>
+    </div> -->
 </header>
 
 <!-- header section ends -->
