--- a/templates/read_all.html
+++ b/templates/read_all.html
@@ -24,202 +24,7 @@
     <h1 class="heading"> <span>featured</span> properties </h1>
 
     <div class="box-container">
-    {% for imoveis in lista_imovel_price %}
-        <div class="box">   
-            <div class="image-container">
-                {% for image in lista_img %}
-                    {% if image.imovel_id == imoveis.id %}
-                        <img src="{{image.img_url}}" alt="">
-                    {% endif %}
-                {% endfor %}
-                
-                <div class="info">
-                    <h3>{{imoveis.data_cadastro}}</h3>
-                    <h3>{{imoveis.status}}</h3>
-                </div>
-                <div class="icons">
-                    <a href="#" class="fas fa-camera"><h3>+</h3></a>
-                </div>
-            </div>
-            <div class="content">
-                <div class="price">
-                    <h3>R{{imoveis.price}}</h3>
-                    <a href="#contact" class="fas fa-envelope"></a>
-                    <a href="#contact" class="fas fa-phone"></a>
-                </div>
-                <div class="location">
-                    <h3>{{imoveis.bairro}}</h3>
-                    <p>{{imoveis.rua}}, {{imoveis.bairro}} - {{imoveis.cidade}}</p>
-                </div>
-                <div class="details">
-                    <h3> <i class="fas fa-expand"></i> {{imoveis.area}}² </h3>
-                    <h3> <i class="fas fa-bed"></i> {{imoveis.quartos}}</h3>
-                    <h3> <i class="fas fa-bath"></i> {{imoveis.banheiros}}</h3>
-                </div>
-                <div class="buttons">
-                    <a href="#contact" class="btn">Visitar</a>
-                    <a href="#" class="btn">detalhes</a>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-    {% for imoveis in lista_imovel_state %}
-        <div class="box">   
-            <div class="image-container">
-                {% for image in lista_img %}
-                    {% if image.imovel_id == imoveis.id %}
-                        <img src="{{image.img_url}}" alt="">
-                    {% endif %}
-                {% endfor %}
-                
-                <div class="info">
-                    <h3>{{imoveis.data_cadastro}}</h3>
-                    <h3>{{imoveis.status}}</h3>
-                </div>
-                <div class="icons">
-                    <a href="#" class="fas fa-camera"><h3>+</h3></a>
-                </div>
-            </div>
-            <div class="content">
-                <div class="price">
-                    <h3>R{{imoveis.price}}</h3>
-                    <a href="#contact" class="fas fa-envelope"></a>
-                    <a href="#contact" class="fas fa-phone"></a>
-                </div>
-                <div class="location">
-                    <h3>{{imoveis.bairro}}</h3>
-                    <p>{{imoveis.rua}}, {{imoveis.bairro}} - {{imoveis.cidade}}</p>
-                </div>
-                <div class="details">
-                    <h3> <i class="fas fa-expand"></i> {{imoveis.area}}² </h3>
-                    <h3> <i class="fas fa-bed"></i> {{imoveis.quartos}}</h3>
-                    <h3> <i class="fas fa-bath"></i> {{imoveis.banheiros}}</h3>
-                </div>
-                <div class="buttons">
-                    <a href="#contact" class="btn">Visitar</a>
-                    <a href="#" class="btn">detalhes</a>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-    {% for imoveis in lista_imovel_cat %}
-        <div class="box">   
-            <div class="image-container">
-                {% for image in lista_img %}
-                    {% if image.imovel_id == imoveis.id %}
-                        <img src="{{image.img_url}}" alt="">
-                    {% endif %}
-                {% endfor %}
-                
-                <div class="info">
-                    <h3>{{imoveis.data_cadastro}}</h3>
-                    <h3>{{imoveis.status}}</h3>
-                </div>
-                <div class="icons">
-                    <a href="#" class="fas fa-camera"><h3>+</h3></a>
-                </div>
-            </div>
-            <div class="content">
-                <div class="price">
-                    <h3>R{{imoveis.price}}</h3>
-                    <a href="#contact" class="fas fa-envelope"></a>
-                    <a href="#contact" class="fas fa-phone"></a>
-                </div>
-                <div class="location">
-                    <h3>{{imoveis.bairro}}</h3>
-                    <p>{{imoveis.rua}}, {{imoveis.bairro}} - {{imoveis.cidade}}</p>
-                </div>
-                <div class="details">
-                    <h3> <i class="fas fa-expand"></i> {{imoveis.area}}² </h3>
-                    <h3> <i class="fas fa-bed"></i> {{imoveis.quartos}}</h3>
-                    <h3> <i class="fas fa-bath"></i> {{imoveis.banheiros}}</h3>
-                </div>
-                <div class="buttons">
-                    <a href="#contact" class="btn">Visitar</a>
-                    <a href="#" class="btn">detalhes</a>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-    {% for imoveis in lista_imovel_space %}
-        <div class="box">   
-            <div class="image-container">
-                {% for image in lista_img %}
-                    {% if image.imovel_id == imoveis.id %}
-                        <img src="{{image.img_url}}" alt="">
-                    {% endif %}
-                {% endfor %}
-                
-                <div class="info">
-                    <h3>{{imoveis.data_cadastro}}</h3>
-                    <h3>{{imoveis.status}}</h3>
-                </div>
-                <div class="icons">
-                    <a href="#" class="fas fa-camera"><h3>+</h3></a>
-                </div>
-            </div>
-            <div class="content">
-                <div class="price">
-                    <h3>R{{imoveis.price}}</h3>
-                    <a href="#contact" class="fas fa-envelope"></a>
-                    <a href="#contact" class="fas fa-phone"></a>
-                </div>
-                <div class="location">
-                    <h3>{{imoveis.bairro}}</h3>
-                    <p>{{imoveis.rua}}, {{imoveis.bairro}} - {{imoveis.cidade}}</p>
-                </div>
-                <div class="details">
-                    <h3> <i class="fas fa-expand"></i> {{imoveis.area}}² </h3>
-                    <h3> <i class="fas fa-bed"></i> {{imoveis.quartos}}</h3>
-                    <h3> <i class="fas fa-bath"></i> {{imoveis.banheiros}}</h3>
-                </div>
-                <div class="buttons">
-                    <a href="#contact" class="btn">Visitar</a>
-                    <a href="#" class="btn">detalhes</a>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-    {% for imoveis in lista_imovel_quar %}
-        <div class="box">   
-            <div class="image-container">
-                {% for image in lista_img %}
-                    {% if image.imovel_id == imoveis.id %}
-                        <img src="{{image.img_url}}" alt="">
-                    {% endif %}
-                {% endfor %}
-                
-                <div class="info">
-                    <h3>{{imoveis.data_cadastro}}</h3>
-                    <h3>{{imoveis.status}}</h3>
-                </div>
-                <div class="icons">
-                    <a href="#" class="fas fa-camera"><h3>+</h3></a>
-                </div>
-            </div>
-            <div class="content">
-                <div class="price">
-                    <h3>R{{imoveis.price}}</h3>
-                    <a href="#contact" class="fas fa-envelope"></a>
-                    <a href="#contact" class="fas fa-phone"></a>
-                </div>
-                <div class="location">
-                    <h3>{{imoveis.bairro}}</h3>
-                    <p>{{imoveis.rua}}, {{imoveis.bairro}} - {{imoveis.cidade}}</p>
-                </div>
-                <div class="details">
-                    <h3> <i class="fas fa-expand"></i> {{imoveis.area}}² </h3>
-                    <h3> <i class="fas fa-bed"></i> {{imoveis.quartos}}</h3>
-                    <h3> <i class="fas fa-bath"></i> {{imoveis.banheiros}}</h3>
-                </div>
-                <div class="buttons">
-                    <a href="#contact" class="btn">Visitar</a>
-                    <a href="#" class="btn">detalhes</a>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-    {% for imoveis in lista_imovel_ban %}
+    {% for imoveis in lista_imovel %}
         <div class="box">   
             <div class="image-container">
                 {% for image in lista_img %}
@@ -259,7 +64,6 @@
         </div>
     {% endfor %}
     </div>
-    
 </section>
 
 <!-- footer section starts  -->
