--- a/templates/index.html
+++ b/templates/index.html
@@ -45,30 +45,30 @@
                     <option value="" disabled hidden selected>Estado da propriedade</option>
                     <option value="nenhum">nenhum</option>
                     <option value="pronta">pronta para morar</option>
-                    <option value="semi-mobiliada">semi-mobiliada</option>
+                    <option value="semi mobiliado">semi-mobiliada</option>
                     <option value="mobiliada">mobiliada</option>
                     <option value="construção">em construção</option>
                 </select>
                 <select name="category" type="text" class="input">
                     <option value="" disabled hidden selected>Categoria</option>
                     <option value="nenhum">nenhum</option>
-                    <option value="flat">apartamento</option>
-                    <option value="house">casa</option>
-                    <option value="shop">ponto comercial</option>
-                    <option value="warehouse">armazem</option>
-                    <option value="land">terreno</option>
+                    <option value="apartamento">apartamento</option>
+                    <option value="casa">casa</option>
+                    <option value="ponto comercial">ponto comercial</option>
+                    <option value="armazem">armazem</option>
+                    <option value="terreno">terreno</option>
                 </select>
                 <select name="space" type="text" class="input">
                     <option value="" disabled hidden selected>Espaços</option>
                     <option value="nenhum">nenhum</option>
-                    <option value="parking space">estacionamento</option>
-                    <option value="swimming pool">piscina</option>
-                    <option value="playground">area de churrasco</option>
+                    <option value="estacionamento">estacionamento</option>
+                    <option value="piscina">piscina</option>
+                    <option value="area de churrasco">area de churrasco</option>
                     <option value="todos">all</option>
                 </select>
                 
-                <input type="number" name="quartos" placeholder="quartos">
-                <input type="number" name="banheiros" placeholder="banheiros">
+                <input type="number" name="quartos" placeholder="quartos" value="0">
+                <input type="number" name="banheiros" placeholder="banheiros" value="0">
                 <!-- 
                 <select name="quartos" type="number" class="input">
                     <option value="" disabled hidden selected>Quartos</option>
